--- a/src/Item/Item.scss
+++ b/src/Item/Item.scss
@@ -1,20 +1,20 @@
+$task-border-bottom: cyan;
+
 li {
     width: 100%;
     height: 100%;
     position: relative;
-    padding: 20px;
-    margin: 5px;
-    display: flex;
-    justify-content: space-between;
+    padding:25px;
     display: flex;
     align-items: center;
+    justify-content: space-between;
     word-break: break-word;
 
     button {
         background-color: transparent;
         color: darkred;
         font-size: 26px;
-        padding: 5px;
+        padding: 0px;
         border: 0;
         display: flex;
         cursor: pointer;
@@ -30,21 +30,21 @@ li {
         content: "";
         position: absolute;
         left: 20px;
-        right: 30px;
+        right: 20px;
         bottom: 0px;
         z-index: 999;
         height: 1px;
-        background-color: darkorchid;
+        background-color: $task-border-bottom;
     }
 }
 
-@media (max-width: 700px) {
+@media (max-width: 800px) , (max-height: 750px) {
     li {
         padding: 10px;
 
         &::after {
-            left: -5px;
-            right: 5px;
+            left: 0px;
+            right: 0px;
         }
     }
 }
