--- a/src/TodoList/TodoList.scss
+++ b/src/TodoList/TodoList.scss
@@ -1,15 +1,20 @@
 .todo-wrapper {
     width: 50vw;
     min-height: 600px;
-    margin: 5% auto 0;
-    border-radius: 12px;
     background-color: #0d1117;
+    margin: 5% auto 0;
     border: 1px solid black;
+    border-radius: 12px;
 
 }
 
-@media (max-width: 700px) {
+@media (max-width: 800px),
+(max-height: 750px) {
     .todo-wrapper {
         width: 90vw;
+        min-height: 90vh;
+        margin: 20px auto;
+        border-bottom-left-radius: 0;
+        border-bottom-right-radius: 0;
     }
 }
